[gd_scene load_steps=40 format=3 uid="uid://2crme3n4cudx"]

[ext_resource type="Script" path="res://scenes/ui/hud_options.gd" id="1_f45wm"]
[ext_resource type="Resource" uid="uid://bay2gjgvc7fk1" path="res://resources/game_sounds.tres" id="2_sounds"]
[ext_resource type="Texture2D" uid="uid://dp1k4wtki5dps" path="res://assets/hermes_interface/2_HUDConfig.png" id="3_ruanp"]
[ext_resource type="PackedScene" uid="uid://dj87bn8r53bcu" path="res://scenes/ui/components/hermes_message_popup.tscn" id="4_60jyg"]
[ext_resource type="Texture2D" uid="uid://84olm6qovl7o" path="res://assets/hermes_interface/2_HCB_27.png" id="5_yy4ew"]
[ext_resource type="Texture2D" uid="uid://coui5n8g4eg7a" path="res://assets/hermes_interface/2_HCB_28.png" id="6_fliyw"]
[ext_resource type="Texture2D" uid="uid://d10baffcsx5gr" path="res://assets/hermes_interface/2_HCB_29.png" id="7_55ynk"]
[ext_resource type="Texture2D" uid="uid://dbsobqdygudlx" path="res://assets/hermes_interface/2_HCB_30.png" id="8_xlekd"]
[ext_resource type="Texture2D" uid="uid://b31lbiq508st2" path="res://assets/hermes_interface/2_HCB_31.png" id="9_g1ij5"]
[ext_resource type="Texture2D" uid="uid://bga7s6msxqxke" path="res://assets/hermes_interface/2_HCB_32.png" id="10_1veor"]
[ext_resource type="Texture2D" uid="uid://dbwmc1l5yrirg" path="res://assets/hermes_interface/2_HCB_33.png" id="11_v7ih2"]
[ext_resource type="Texture2D" uid="uid://d1h402fngmxcl" path="res://assets/hermes_interface/2_HCB_34.png" id="12_bxgap"]
[ext_resource type="Texture2D" uid="uid://pxujmj15wuyl" path="res://assets/hermes_interface/2_HCB_35.png" id="13_ssc3f"]
[ext_resource type="Texture2D" uid="uid://347s2tb64ubt" path="res://assets/hermes_interface/2_HCB_36.png" id="14_j8blp"]
[ext_resource type="Texture2D" uid="uid://bh7h8lnn5f57l" path="res://assets/hermes_interface/2_HCB_37.png" id="15_6ld2n"]
[ext_resource type="Texture2D" uid="uid://bqbu7k5l7o3f2" path="res://assets/hermes_interface/2_HCB_38.png" id="16_vwe65"]
[ext_resource type="Texture2D" uid="uid://d0i7elumrxmp0" path="res://assets/hermes_interface/2_HCB_39.png" id="17_x7pus"]
[ext_resource type="Texture2D" uid="uid://bucfc85iewwgj" path="res://assets/hermes_interface/2_HCB_40.png" id="18_vicu8"]
[ext_resource type="Texture2D" uid="uid://dep7khwyapmlx" path="res://assets/hermes_interface/2_HCB_41.png" id="19_urcii"]
[ext_resource type="Texture2D" uid="uid://b0ux6c5whosib" path="res://assets/hermes_interface/2_HCB_42.png" id="20_jymtv"]
[ext_resource type="Texture2D" uid="uid://cah1d4f010tkf" path="res://assets/hermes_interface/2_HCB_43.png" id="21_5bl4p"]
[ext_resource type="Texture2D" uid="uid://chheg66cqhqbf" path="res://assets/hermes_interface/2_HCB_44.png" id="22_uukx4"]
[ext_resource type="Texture2D" uid="uid://c1lh7wyuap0t6" path="res://assets/hermes_interface/2_HCB_45.png" id="23_aqm1f"]
[ext_resource type="Texture2D" uid="uid://hawq1voqb1mb" path="res://assets/hermes_interface/2_HCB_46.png" id="24_gkq16"]
[ext_resource type="Texture2D" uid="uid://dphoxo85heor8" path="res://assets/hermes_interface/2_HCB_47.png" id="25_o4mcc"]
[ext_resource type="Texture2D" uid="uid://c7mpeb5dftqyo" path="res://assets/hermes_interface/2_HCB_48.png" id="26_yw3bd"]
[ext_resource type="Texture2D" uid="uid://cb0l3m6wh5x86" path="res://assets/hermes_interface/2_HCB_49.png" id="27_g0jfl"]
[ext_resource type="Texture2D" uid="uid://b28ffrfw8sa7s" path="res://assets/hermes_interface/2_HCB_50.png" id="28_xdjud"]
[ext_resource type="Texture2D" uid="uid://dww8yrvwpcsov" path="res://assets/hermes_interface/2_HCB_51.png" id="29_d7qnn"]
[ext_resource type="Texture2D" uid="uid://bcg8khv1p8c4g" path="res://assets/hermes_interface/2_HCB_52.png" id="30_ucalm"]
[ext_resource type="Texture2D" uid="uid://hca30snjbw8c" path="res://assets/hermes_interface/2_HCB_53.png" id="31_mbutv"]
[ext_resource type="Texture2D" uid="uid://bxix7ywye4et3" path="res://assets/hermes_interface/2_HCB_54.png" id="32_bi4ke"]
[ext_resource type="Texture2D" uid="uid://bc6mh2jkcluoh" path="res://assets/hermes_interface/2_HCB_55.png" id="33_6r14s"]
[ext_resource type="Texture2D" uid="uid://wcpk68ytt2s1" path="res://assets/hermes_interface/2_HCB_56.png" id="34_vgr28"]
[ext_resource type="Texture2D" uid="uid://bauyby88dxouo" path="res://assets/hermes_interface/2_HCB_57.png" id="35_dfti6"]
[ext_resource type="Texture2D" uid="uid://cexsnoxxbvkk0" path="res://assets/hermes_interface/2_HCB_58.png" id="36_7gk6q"]
[ext_resource type="Texture2D" uid="uid://b7ejpwuj6l52b" path="res://assets/hermes_interface/2_HCB_61.png" id="37_iho6r"]
[ext_resource type="Texture2D" uid="uid://d1nipma72n3l5" path="res://assets/hermes_interface/2_HCB_62.png" id="38_da1gn"]
[ext_resource type="Texture2D" uid="uid://bw4sptcsr4gfh" path="res://assets/hermes_interface/2_HCB_63.png" id="39_io51b"]

[node name="HUDOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f45wm")
sounds = ExtResource("2_sounds")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ruanp")

[node name="HudElementsList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -445.0
offset_top = 624.0
offset_right = -88.0
offset_bottom = 756.0
grow_horizontal = 2

[node name="HudElements" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 178.0
offset_top = 18.0
offset_right = 1024.0
offset_bottom = 588.0

[node name="LEAD_INDICATOR" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 506.0
offset_top = 171.0
offset_right = 522.0
offset_bottom = 184.0
texture = ExtResource("15_6ld2n")

[node name="ORIENTATION_TEE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 315.0
offset_top = 178.0
offset_right = 330.0
offset_bottom = 193.0
texture = ExtResource("14_j8blp")

[node name="HOSTILE_TARGET" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 298.0
offset_top = 401.0
offset_right = 319.0
offset_bottom = 426.0
texture = ExtResource("23_aqm1f")

[node name="TARGET_TRIANGLE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 482.0
offset_top = 156.0
offset_right = 498.0
offset_bottom = 169.0
texture = ExtResource("15_6ld2n")

[node name="MISSION_TIME" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -29.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("39_io51b")

[node name="RETICLE_CIRCLE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 522.0
offset_top = 94.0
offset_right = 548.0
offset_bottom = 118.0
texture = ExtResource("13_ssc3f")

[node name="THROTTLE_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 269.0
offset_top = 205.0
offset_right = 343.0
offset_bottom = 386.0
texture = ExtResource("18_vicu8")

[node name="RADAR" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -133.0
offset_right = 82.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("28_xdjud")

[node name="TARGET_MONITOR" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -198.0
offset_right = 170.0
grow_vertical = 0
texture = ExtResource("9_g1ij5")

[node name="CENTER_RETICLE" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = -119.5
offset_right = 119.5
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_urcii")

[node name="TARGET_MONITOR_EXTRA_DATA" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 53.0
offset_right = 122.0
offset_bottom = 83.0
grow_vertical = 2
texture = ExtResource("8_xlekd")

[node name="TARGET_SHIELD_ICON" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 210.0
offset_top = 460.0
offset_right = 324.0
offset_bottom = 562.0
texture = ExtResource("29_d7qnn")

[node name="PLAYER_SHIELD_ICON" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 512.0
offset_top = 460.0
offset_right = 626.0
offset_bottom = 562.0
texture = ExtResource("27_g0jfl")

[node name="ETS_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -113.0
offset_right = -100.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("36_7gk6q")

[node name="AUTO_TARGET" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 172.5
offset_bottom = 197.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("37_iho6r")

[node name="AUTO_SPEED" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -84.0
offset_bottom = -58.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("38_da1gn")

[node name="WEAPONS_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -172.0
offset_top = 31.0
offset_bottom = 105.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("33_6r14s")

[node name="ESCORT_VIEW" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -64.0
offset_right = -1.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("32_bi4ke")

[node name="DIRECTIVES_VIEW" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 1.0
offset_top = 215.0
offset_right = 219.0
offset_bottom = 250.0
texture = ExtResource("7_55ynk")

[node name="AFTERBURNER_ENERGY" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 220.0
offset_top = 320.0
offset_right = 276.0
offset_bottom = 395.0
texture = ExtResource("17_x7pus")

[node name="WEAPONS_ENERGY" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 570.0
offset_top = 320.0
offset_right = 626.0
offset_bottom = 395.0
texture = ExtResource("22_uukx4")

[node name="WEAPON_LINKING_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 458.0
offset_top = 202.0
offset_right = 540.0
offset_bottom = 377.0
texture = ExtResource("21_5bl4p")

[node name="TARGET_MINI_ICON" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 378.0
offset_top = 497.0
offset_right = 394.0
offset_bottom = 510.0
texture = ExtResource("15_6ld2n")

[node name="OFFSCREEN_INDICATOR" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 530.0
offset_top = 10.0
offset_right = 567.0
offset_bottom = 32.0
texture = ExtResource("12_bxgap")

[node name="TALKING_HEAD" type="TextureRect" parent="HudElements"]
layout_mode = 0
texture = ExtResource("6_fliyw")

[node name="DAMAGE_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 43.0
offset_right = 92.0
offset_bottom = 79.0
grow_horizontal = 2
texture = ExtResource("10_1veor")

[node name="MESSAGE_LINES" type="TextureRect" parent="HudElements"]
layout_mode = 1
offset_right = 338.0
offset_bottom = 15.0
texture = ExtResource("5_yy4ew")

[node name="MISSILE_WARNING_ARROW" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 292.0
offset_top = 205.0
offset_right = 311.0
offset_bottom = 224.0
texture = ExtResource("26_yw3bd")

[node name="CMEASURE_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 674.0
offset_top = 397.0
offset_right = 752.0
offset_bottom = 417.0
texture = ExtResource("34_vgr28")

[node name="OBJECTIVES_NOTIFY_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 116.0
offset_right = 93.0
offset_bottom = 143.0
grow_horizontal = 2
texture = ExtResource("11_v7ih2")

[node name="WINGMEN_STATUS" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -134.0
offset_bottom = -66.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("31_mbutv")

[node name="KILLS_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 674.0
offset_top = 431.0
offset_right = 776.0
offset_bottom = 450.0
texture = ExtResource("35_dfti6")

[node name="ATTACKING_TARGET_COUNT" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 76.5
offset_right = 20.0
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_jymtv")

[node name="TEXT_FLASH" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -93.5
offset_right = 38.5
offset_bottom = -84.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_vwe65")

[node name="MESSAGE_BOX" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -236.0
offset_bottom = 100.0
grow_horizontal = 0
texture = ExtResource("30_ucalm")

[node name="SUPPORT_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = 120.5
offset_right = 67.5
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("24_gkq16")

[node name="LAG_GAUGE" type="TextureRect" parent="HudElements"]
layout_mode = 0
offset_left = 539.0
offset_top = 394.0
offset_right = 576.0
offset_bottom = 432.0
texture = ExtResource("25_o4mcc")

[node name="ColorControls" type="Control" parent="."]
anchors_preset = 0
offset_right = 173.0
offset_bottom = 40.0

[node name="Caption" type="HBoxContainer" parent="ColorControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Padding" type="Control" parent="ColorControls/Caption"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="ColorControls/Caption"]
layout_mode = 2
size_flags_horizontal = 3
text = "R"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ColorControls/Caption"]
layout_mode = 2
size_flags_horizontal = 3
text = "G"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="ColorControls/Caption"]
layout_mode = 2
size_flags_horizontal = 3
text = "B"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="ColorControls/Caption"]
layout_mode = 2
size_flags_horizontal = 3
text = "I"
horizontal_alignment = 1

[node name="Padding2" type="Control" parent="ColorControls/Caption"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="ColorControls" type="HBoxContainer" parent="ColorControls"]
layout_mode = 0
offset_left = 1.0
offset_top = 85.0
offset_right = 159.0
offset_bottom = 460.0

[node name="Padding" type="Control" parent="ColorControls/ColorControls"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="RedSlider" type="VSlider" parent="ColorControls/ColorControls"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Padding2" type="Control" parent="ColorControls/ColorControls"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="GreenSlider" type="VSlider" parent="ColorControls/ColorControls"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Padding3" type="Control" parent="ColorControls/ColorControls"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="BlueSlider" type="VSlider" parent="ColorControls/ColorControls"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Padding4" type="Control" parent="ColorControls/ColorControls"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2

[node name="IntensitySlider" type="VSlider" parent="ColorControls/ColorControls"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="ColorPresets" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 571.0
offset_top = 668.0
offset_right = 683.0
offset_bottom = 769.0
alignment = 1

[node name="AmberButton" type="Button" parent="ColorPresets"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "HUD 1"

[node name="BlueButton" type="Button" parent="ColorPresets"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "HUD 2"

[node name="GreenButton" type="Button" parent="ColorPresets"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "HUD 3"

[node name="GaugeControls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 53.0
offset_top = 521.0
offset_right = 152.0
offset_bottom = 622.0
alignment = 1

[node name="OnButton" type="Button" parent="GaugeControls"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "On"

[node name="OffButton" type="Button" parent="GaugeControls"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "Off"

[node name="PopupButton" type="Button" parent="GaugeControls"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "Popup"

[node name="GaugeControls2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 743.0
offset_top = 649.0
offset_right = 1021.0
offset_bottom = 680.0
alignment = 1

[node name="SelectAllButton" type="Button" parent="GaugeControls2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Select All"

[node name="ResetButton" type="Button" parent="GaugeControls2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Reset"

[node name="AcceptButton" type="Button" parent="GaugeControls2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Accept"

[node name="HelpPopup" parent="." instance=ExtResource("4_60jyg")]
visible = false
message_text = "Configure HUD gauge colors and visibility. Select individual gauges from the list or use \"Select All\" to modify multiple gauges at once.Some gauges can be set to \"Popup\" mode, which means they will only appear when relevant (e.g. the damage display when taking damage).Press ESC to cancel changes."
